Project/objects/Apttus_Proposal__Proposal_Line_Item__c.object
<CustomObject>
    <description>Represents a product or service line item associated with a quote/proposal</description>
    <fields>
        <fullName>APTS_List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Winner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Winner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Proposal Line Items (Winner)</relationshipLabel>
        <relationshipName>Proposal_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
	<fields>
        <fullName>APTS_Is_Valid_Configuration_Count__c</fullName>
        <label>Is Valid Configuration Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
	<fields>
        <fullName>APTS_Above_Start__c</fullName>
        <description>Reporting field to calculate the % Quote Line Items &quot;Above Start&quot;</description>
        <formula>Apttus_QPConfig__NetPrice__c &gt; APTS_P_High_Value__c</formula>
        <label>Above Start</label>
        <type>Checkbox</type>
    </fields>
   <fields>
        <fullName>APTS_Between_Start_Target__c</fullName>
        <description>Reporting field to calculate the % Quote Line Items &quot;Between Start &amp; Target&quot;</description>
        <formula>AND(Apttus_QPConfig__NetPrice__c &gt; APTS_P_Low_Value__c,
    Apttus_QPConfig__NetPrice__c &gt;= APTS_P_Avg_Value__c,
    Apttus_QPConfig__NetPrice__c &lt;= APTS_P_High_Value__c)</formula>
        <label>Between Start &amp; Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Business_Unit__c</fullName>
        <description>Reporting field created to track the Business Unit of the line item Product Group</description>
        <formula>APTS_Product_Group__r.Business_Unit__c</formula>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Corridor_Type__c</fullName>
        <description>Values will be Standard/Margin/Deal</description>
        <label>Corridor Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Division__c</fullName>
        <description>Reporting field to track Division of the line item Product Group</description>
        <formula>APTS_Product_Group__r.Division__c</formula>
        <label>Division</label>
        <type>Text</type>
    </fields>
   <fields>
        <fullName>APTS_P_Avg_Percentage__c</fullName>
        <label>P-Avg (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
   <fields>
        <fullName>APTS_P_Low_Percentage__c</fullName>
        <label>P-Low (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Peer_Group__c</fullName>
        <description>Field to capture the Peer Group associated with the Quote Line Item</description>
        <label>Peer Group</label>
        <length>25</length>
        <type>Text</type>
    </fields>
   <fields>
        <fullName>APTS_Wizard_Score__c</fullName>
        <description>To be used in Pricing+ KPI, copied from Line item on finalize</description>
        <label>Pricing Power</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Lost_Value__c</fullName>
        <description>Reporting field for HitRate Calculation</description>
        <formula>IF ( ISPICKVAL(Apttus_QPConfig__LineStatus__c, &apos;Lost&apos;) , Apttus_QPConfig__NetPrice__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Lost Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_Won_Value__c</fullName>
        <description>Reporting Field to calculate HitRate %</description>
        <formula>IF(OR
(ISPICKVAL(Apttus_QPConfig__LineStatus__c, &apos;Order Pending&apos;),
ISPICKVAL(Apttus_QPConfig__LineStatus__c, &apos;Ordered&apos;),
ISPICKVAL(Apttus_QPConfig__LineStatus__c, &apos;Won&apos;),
ISPICKVAL(Apttus_QPConfig__LineStatus__c, &apos;New Order&apos;)
) , Apttus_QPConfig__NetPrice__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Won Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
	<fields>
		<fullName>APTS_Delivery_Terms__c</fullName>
		<label>Delivery Terms</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>APTS_Payment_Term_Code__c</fullName>
		<label>Payment Term Code</label>
		<length>255</length>
		<type>Text</type>
	</fields>
    <fields>
        <fullName>APTS_ABB_Fees__c</fullName>
        <label>ABB Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_ABB_Global_Product_Code_Description__c</fullName>
        <label>ABB Global Product Code/Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    
    <fields>
        <fullName>APTS_External_Configurator_Type__c</fullName>
        <label>ABB Prod Type ID / Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ABB_Source_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ABB Source Location</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7 AND 8 AND 9</booleanFilter>
            <filterItems>
                <field>ABB_Location__c.Deleted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.Data_Load_Year__c</field>
                <operation>notEqual</operation>
                <value>2015</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.BU__c</field>
                <operation>notContain</operation>
                <value>ZCCO, ZCRE, ZCVA</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.DIV__c</field>
                <operation>notEqual</operation>
                <value>ZC-Corporate &amp; Other</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.Activity__c</field>
                <operation>notEqual</operation>
                <value>Admin/Corporate, Other, R&amp;D, Warehouse or Logistics, Training</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.Activity__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.Product_Group_Number__c</field>
                <operation>equals</operation>
                <valueField>ABB_Location__c.Product_Group_Number__c</valueField>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.BU__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.DIV__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ABB_Location__c</referenceTo>
        <relationshipLabel>Proposal Line Items</relationshipLabel>
        <relationshipName>Proposal_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_ABB_Target_Price__c</fullName>
        <label>ABB Target Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Accommodation__c</fullName>
        <label>Accommodation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Account_End_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account End User</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Proposal Line Items (Account End User)</relationshipLabel>
        <relationshipName>Proposal_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Accruals__c</fullName>
        <label>Accruals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Additional_Reason_for_Close__c</fullName>
        <label>Additional Reason for Close</label>
        <picklist>
            <controllingField>Apttus_QPConfig__LineStatus__c</controllingField>
            <picklistValues>
                <fullName>ABB only bidder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adherence to Customer&apos;s time schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bidding time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled alternative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled by customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled by customer after bidding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial deviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercially unacceptable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Frame Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrity issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No financing in place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No installed base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No or bad track record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No permit in place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other preferred suppliers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part of winning ABB package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Political decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price not competitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pursued by another ABB entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource/availability constraints</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk unacceptable</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>APTS_Adjustment_Amount__c</fullName>
        <formula>APTS_Base_Price__c -  Apttus_QPConfig__DerivedFromId__r.APTS_Unit_Net_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjustment Amount*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
        <fields>
        <fullName>APTS_Configuration_Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Configuration Legacy ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Administration__c</fullName>
        <label>Administration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Administrative_Costs__c</fullName>
        <label>Administrative Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Alternative_To__c</fullName>
        <label>Alternative To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Application_BU__c</fullName>
        <label>Application BU</label>
        <picklist>
            <picklistValues>
                <fullName>DMDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PATU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All other BU&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAPG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Approval Req</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Assessment_Type__c</fullName>
        <label>Assessment Type</label>
        <picklist>
            <picklistValues>
                <fullName>FirstCost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TotalOwnerShipCost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Auxiliary_Losses__c</fullName>
        <inlineHelpText>kW</inlineHelpText>
        <label>Auxiliary Losses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Average_Discount_by_Product_Channel__c</fullName>
        <label>Average Discount by Product (Channel)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Average_Discount_by_Product__c</fullName>
        <label>Average Discount by Product</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_BAL_ID__c</fullName>
        <label>BAL ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Base_Price_EUR__c</fullName>
        <formula>IF( 
APTS_Base_Price__c &gt;= 1000000, 
TEXT(FLOOR(APTS_Base_Price__c/ 1000000)) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
IF( 
APTS_Base_Price__c&gt;= 1000, 
RIGHT(TEXT(FLOOR(APTS_Base_Price__c / 1000)), 3) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(APTS_Base_Price__c)), 3) &amp; &quot;,&quot; &amp; 
IF( 
MOD(APTS_Base_Price__c, 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD(APTS_Base_Price__c, 1), 2) * 100), 
TEXT(MIN(ROUND(MOD(APTS_Base_Price__c, 1), 2) * 100, 99)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Price EUR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Base_Price__c</fullName>
        <formula>Apttus_QPConfig__BasePrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Below_Walk_Away__c</fullName>
        <description>Reporting field to calculate the % Quote Line Items &quot;Below Walk-away&quot;</description>
        <formula>Apttus_QPConfig__NetPrice__c &lt; APTS_P_Low_Value__c</formula>
        <label>Below Walk-away</label>
        <type>Checkbox</type>
    </fields>
        <fields>
        <fullName>APTS_External_Configurator_Product_Desc__c</fullName>
        <label>ABB Prod. Long Desc.</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Between_Target_Walk_away__c</fullName>
        <description>Reporting field to calculate the % Quote Line Items &quot;Between Target &amp; Walk-away&quot;</description>
        <formula>AND(Apttus_QPConfig__NetPrice__c &gt;= APTS_P_Low_Value__c,
Apttus_QPConfig__NetPrice__c &lt;= APTS_P_Avg_Value__c)</formula>
        <label>Between Target &amp; Walk-away</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Calculated_Maximum_Total_Discount__c</fullName>
        <label>Calculated Maximum Total Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Configurator_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configurator Admin</label>
        <referenceTo>APTS_Configurator_Admin__c</referenceTo>
        <relationshipLabel>Proposal Line Items</relationshipLabel>
        <relationshipName>Proposal_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Configurator_ID__c</fullName>
        <label>Configurator ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Configure_Status__c</fullName>
        <label>Upload Status</label>
        <picklist>
            <picklistValues>
                <fullName>Changed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Load</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ConfigIT Upload</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Conservation__c</fullName>
        <label>Conservation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Contact_Info_at_Source_Location__c</fullName>
        <label>Contact Info at Source Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Contingency__c</fullName>
        <label>Contingency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Contribution_Margin__c</fullName>
        <label>Contribution Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Control_System_Id__c</fullName>
        <label>Control System Id</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Control_System_Maintenance_Level__c</fullName>
        <label>Control System Maintenance Level</label>
        <length>20</length>
        <type>Text</type>
    </fields>
   <fields>
        <fullName>APTS_Credit_Note_Amount__c</fullName>
        <label>Credit Note Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_CustReqDisc__c</fullName>
        <label>Cust. Requested Disc. %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Cust_Requested_Disc_Percentage__c</fullName>
        <label>Cust. Requested Disc. %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Custom_Notes_and_Attachment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom Notes and Attachment</label>
        <referenceTo>APTS_Custom_Notes_and_Attachments__c</referenceTo>
        <relationshipLabel>Proposal Line Items</relationshipLabel>
        <relationshipName>Proposal_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_Incoterm_Destination__c</fullName>
        <formula>Apttus_Proposal__Proposal__r.APTS_Customer_Incoterm_Destination__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Incoterm Destination</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_Incoterms__c</fullName>
        <formula>Apttus_Proposal__Proposal__r.APTS_Customer_Incoterms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Incoterms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_Line_Number__c</fullName>
        <label>Customer Line Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_Payment_Terms__c</fullName>
        <formula>Apttus_Proposal__Proposal__r.APTS_Customer_Payment_Terms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Payment Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_Preference__c</fullName>
        <label>Customer Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_Product_Code__c</fullName>
        <label>Customer Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_Product_Name__c</fullName>
        <description>Created as part of STS-Release 7A:Quotation field alignment.</description>
        <label>Customer Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_Requested_Discount__c</fullName>
        <label>Customer Requested Discount (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_Requested_Price_Net__c</fullName>
        <label>Customer Requested Price Net</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Customs_Clearance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customs Clearance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Date_of_the_Price_List__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of the Price List</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APTS_Delivery_Days__c</fullName>
        <label>Delivery Days</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Delivery_Time__c</fullName>
        <description>Placeholder field to hold the value of delivery time fetched from SAP in numeric format for each line item. Value in this field is the value copied from the same field in corresponding line item.</description>
        <label>Delivery Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Despatch_Marks__c</fullName>
        <label>Despatch Marks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Dimensions__c</fullName>
        <label>Dimensions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Direct_Cost__c</fullName>
        <label>Direct Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Direct_Development_Specific_Orders__c</fullName>
        <label>Direct Development for Specific Orders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Discount_MSPA_or_Direct_Customer__c</fullName>
        <label>Discount (%) for MSPA or Direct Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Discount_Percentage__c</fullName>
        <description>Field to hold the value of percentage of discount applied to the line item when selected discount type is either &quot;Substitute Discount&quot; or &quot;Additional Discount&quot;.</description>
        <label>Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Discount_Type__c</fullName>
        <description>Field used by user to select appropriate type of discount in line item.</description>
        <label>Discount Type</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substitute Discount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Discount__c</fullName>
        <formula>IF( Apttus_QPConfig__NetAdjustmentPercent__c=0, APTS_Discount_Percentage__c, APTS_Net_Adjustment__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Discount_per_Target_Customer__c</fullName>
        <label>Discount per Target Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_ECO_tax__c</fullName>
        <label>ECOtax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_ERP_ID__c</fullName>
        <label>ERP ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Engineering_Hourly_Rate__c</fullName>
        <label>Engineering Hourly Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Engineering_Hours__c</fullName>
        <label>Engineering Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Estimated_Delivery_Days__c</fullName>
        <inlineHelpText>Indicates the delivery in number of days.</inlineHelpText>
        <label>Estimated Delivery Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Estimated_Transportation_Time__c</fullName>
        <label>Estimated Transportation Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Exchange_Rate_Override__c</fullName>
        <label>Exchange Rate Override</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Export_Control__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Export Control</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Extended_Warranty__c</fullName>
        <label>Extended Warranty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_Extra_Discount_in_Add_for_Commessa__c</fullName>
        <label>Extra Discount in Additional for Commess</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_FACE_REF_ID__c</fullName>
        <formula>Apttus_Proposal__Proposal__r.APTS_FACE_REF_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FACE REF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_FACE_REF_LINEID__c</fullName>
        <formula>IF(ISBLANK(APTS_FACE_Reference_No__c),Id,APTS_FACE_Reference_No__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FACE REF LINEID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_FACE_Reference_No__c</fullName>
        <label>FACE Reference No.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_FF_Gross_Margin__c</fullName>
        <label>FF Gross Margin (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_FF_Gross_Result__c</fullName>
        <label>FF Gross Result</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_FF_Net_Margin__c</fullName>
        <label>FF Net Margin (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_FF_Net_Result__c</fullName>
        <label>FF Net Result</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Factory_Currency_Conversion_Rate__c</fullName>
        <label>Factory Currency Conversion Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Factory_Currency_Rate_Overrid__c</fullName>
        <label>Factory Currency Conversion Rate Overrid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Factory_Currency__c</fullName>
        <label>Factory Currency</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Factory_Transfer_Price__c</fullName>
        <label>Factory Transfer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Freight_Payment_Terms__c</fullName>
        <label>Freight Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Prepaid and Allowed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepaid and Bill Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash on Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Etc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>